--- a/public/index.html
+++ b/public/index.html
@@ -14,24 +14,28 @@
       align-items: center;
       justify-content: center;
       max-height: 100vh;
+      max-width: 100vw;
     }
     main {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
-      padding: 1em;
+      padding: .5em;
       box-sizing: border-box;
     }
     img {
-      width: auto;
+      width: 100%;
       height: 100%;
+      max-height: 100vh;
+      max-width: 100vw;
       border: 1px solid #444;
       box-sizing: border-box;
     }
   </style>
 </head>
 <body>
+  <script src="index.js" type="module"></script>
   <main>
     <img
       src="$CAMINATOR_STREAM_URL"
