--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>$CAMINATOR_TITLE</title>
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./favicon.ico">
+
+</head>
+<body>
   <style>
+    @font-face {
+      font-family: 'Source Code Pro';
+      src: url('./SourceCodePro-VariableFont_wght.ttf');
+      font-weight: 100 1000;
+    }
+    @font-face {
+      font-family: 'Noto Sans Mono';
+      src: url('./NotoSansMono-VariableFont_wdth,wght.ttf');
+      font-weight: 100 1000;
+      font-stretch: 62.5% 100%;
+    }
     html, body {
+      font-family: 'Noto Sans Mono';
       padding: 0;
       margin: 0;
       background: #000;
@@ -49,22 +65,34 @@
     }
     #controls .control {
       display: grid;
+      grid-auto-flow: column;
+      grid-gap: 5px;
+      justify-items: center;
+      background: rgba(0,0,0,0.5);
+    }
+    #controls .control .inputs {
+      display: grid;
       grid-gap: 0px;
       justify-items: center;
     }
     #controls .control label {
+      font-weight: 700;
+      font-stretch: 75%;
       background: #000;
       color: #fff;
       border-radius: 2px;
       padding: 2px 4px;
+      white-space: nowrap;
+      font-size: 10px;
+      line-height: 10px;
+      text-transform: uppercase;
     }
     #controls .control input {
-      height: 32px;
-      width: 100px;
+      font-size: 10px;
+      height: 20px;
+      width: 65px;
     }
   </style>
-</head>
-<body>
   <script src="./index.js" type="module"></script>
   <main data-root="$CAMINATOR_ROOT">
     <img
