fix camera controls and quality setting, add cachebreaker param to url

--- a/public/index.html
+++ b/public/index.html
@@ -94,15 +94,12 @@
     }
   </style>
   <script src="./index.js" type="module"></script>
-  <main data-root="$CAMINATOR_ROOT">
-    <img
-      src="$CAMINATOR_STREAM_URL"
-      width="$CAMINATOR_VIDEO_WIDTH"
-      height="$CAMINATOR_VIDEO_HEIGHT"
-    />
-
-    <div id="controls">
-    </div>
+  <main
+    data-root="$CAMINATOR_STREAM_URL"
+    data-quality="$CAMINATOR_QUALITY"
+    data-width="$CAMINATOR_WIDTH"
+    data-height="$CAMINATOR_HEIGHT"
+  >
   </main>
 </body>
 </html>
