--- a/public/index.html
+++ b/public/index.html
@@ -38,17 +38,21 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
       height: 100%;
       box-sizing: border-box;
       position: relative;
     }
-    img {
+    #stream {
       width: 100%;
       height: 100%;
       max-height: 100vh;
       max-width: 100vw;
       border: 1px solid #444;
       box-sizing: border-box;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
     #controls button {
       padding: 0;
@@ -101,6 +105,7 @@
     data-width="$CAMINATOR_WIDTH"
     data-height="$CAMINATOR_HEIGHT"
   >
+    <div id="stream"></div>
   </main>
 </body>
 </html>
