add day and night modes

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     }
     #controls {
       display: grid;
-      grid-auto-flow: column;
+      grid-template-columns: repeat(9, max-content);
       grid-gap: 5px;
       padding: 5px;
       font-size: .8em;
